login y registro terminados, VTR, dashboard dinamico, base comercial ajustada

--- a/public/assets/css/argon-dashboard.css
+++ b/public/assets/css/argon-dashboard.css
@@ -20670,8 +20670,8 @@ fieldset:disabled .btn {
 
 .btn-dark:hover,
 .btn.bg-gradient-dark:hover {
-  background-color: #344767;
-  border-color: #344767;
+  background-color: #59595B;
+  border-color: #59595B;
 }
 
 .btn-dark .btn.bg-outline-dark,
