--- a/public/assets/css/argon-dashboard.css
+++ b/public/assets/css/argon-dashboard.css
@@ -129,6 +129,9 @@ h6,
   color: var(--bs-heading-color);
 }
 
+/* Alpine */
+  [x-cloak] { display: none !important; }
+/* --- */
 h1,
 .h1 {
   font-size: calc(1.425rem + 2.1vw);
