--- a/public/assets/css/argon-dashboard.css
+++ b/public/assets/css/argon-dashboard.css
@@ -23526,12 +23526,12 @@ hr.horizontal.gray-light {
 .g-sidenav-show:not(.g-sidenav-hidden) .navbar-vertical .nav-item .nav-link span.sidenav-mini-icon {
   opacity: 0;
 }
-
+ 
 .g-sidenav-hidden .sidenav-footer {
   display: none;
 }
-
-@media (min-width: 1200px) {
+ 
+@media (min-width: 1200px) { 
   .g-sidenav-hidden.rtl .main-content {
     margin-right: 6rem !important;
   }
@@ -23539,17 +23539,18 @@ hr.horizontal.gray-light {
   .g-sidenav-hidden.rtl .main-content .navbar-vertical:hover {
     max-width: 15.625rem !important;
   }
-
+ 
   .g-sidenav-hidden.rtl .sidenav:hover+.main-content {
     margin-right: 17.125rem !important;
   }
 
   .g-sidenav-hidden .navbar-vertical {
-    max-width: 6rem !important;
+    display: none;
+    max-width: 6rem !important; 
   }
 
   .g-sidenav-hidden .navbar-vertical.fixed-start+.main-content {
-    margin-left: 7.5rem;
+    margin-left: 0.5rem;
   }
 
   .g-sidenav-hidden .navbar-vertical .navbar-brand img {
