Se agrega un nuevo estado en ordens de compra (cerrado) se revisan los procesos y se extienden las capacidades del modulo. Ahora deberá ser capaz de alamacenar una firma digital. Se restringen accesos a diferentes apartados, según el estado y el rol de usuario

--- a/public/assets/css/argon-dashboard.css
+++ b/public/assets/css/argon-dashboard.css
@@ -112,7 +112,12 @@ body {
 
 .font-table { 
   font-size: 9px;
-} 
+}
+
+.signature-pad {
+  border: 1.5px solid #fb6340;
+  border-radius: 15px;
+}
 /* *** */
 
 hr {
