--- a/public/assets/css/argon-dashboard.css
+++ b/public/assets/css/argon-dashboard.css
@@ -110,6 +110,11 @@ body {
   color: #fd5c70;
 }
 
+.separator {
+  margin: 1rem 2rem;
+  border-bottom: 3px double;
+}
+
 .font-table { 
   font-size: 9px;
 }
